--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,13 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 server.servlet.context-path=/jhzf
 server.servlet.jsp.init-parameters.development=true
 server.port=8081
-mybatis.type-aliases-package=com.jh.entity
-mybatis.mapper-locations=com/jh/mapper/*Mapper.xml
+mybatis.type-aliases-package=com.xh.entity
+mybatis.mapper-locations=com/xh/mapper/*Mapper.xml
+#mybatis-plus.mapper-locations=classpath:com/xh/mapper/*Mapper.xml
+#mybatis-plus.type-aliases-package=com.xh.entity
 logging.level.com.xh.dao=trace
 logging.pattern.console=%d{yyyy/MM/dd-HH:mm:ss} [%thread] %-5level %logger- %msg%n 
 logging.pattern.file=%d{yyyy/MM/dd-HH:mm} [%thread] %-5level %logger- %msg%n
+
 #spring.redis.host=
 #spring.redis.port=
